2010-12-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Implement support for JUMP_IF_FALSE/TRUE and
	  JUMP_IF_FALSE/TRUE_OR_POP.
	  Brings 2.7 test failures from 33 to 7.
	  Compared to 2.6, the only difference is 85 now failing and 78
	  passing.

2010-12-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Rearrange opcodes for 2.7, without implementing new or
	  changed opcodes.
	  Brings 2.7 test failures from 54 to 33.

2010-12-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* HACKING:
	  Add notes on updating to newer Python version.
	* pychecker/OP.py:
	  Adapt to opcode changes and additions.
	  Brings 2.7 test failures from 69 to 54.

2010-12-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/checker.py:
	* pychecker/function.py:
	* pychecker/warn.py:
	  Rename PyCheckerModule's main_code to mainCode to be consistent with
	  other instance variable names.
	  More PEP-8-ifying.
	  More docstrings.

2010-12-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  PEP-8-ify more.  Document _filterDir.  Add _getModuleTokens similar
	  to _getClassTokens.

2010-12-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Make function PEP-8.  Comment and restructure.

2010-12-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Make code more PEP-8.
	  If we get pcmodule, reuse it on the next line.

2010-12-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/utils.py:
	  Add constant for 2.7

2010-12-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/opcodes/opcodes-2.3:
	* doc/opcodes/opcodes-2.4:
	* doc/opcodes/opcodes-2.5:
	* doc/opcodes/opcodes-2.6:
	* doc/opcodes/opcodes-2.7:
	* scripts/opcodes.py:
	  Add a script to list opcodes, and record the results for 5 python
	  versions.
