@@ -1,6 +1,12 @@
 2010-12-18  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* pychecker/CodeChecks.py:
+	  Implement support for SET_ADD, MAP_ADD and the new style
+	  LIST_APPEND.
+
+2010-12-18  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* pychecker/CodeChecks.py:
 	  Implement support for JUMP_IF_FALSE/TRUE and
 	  JUMP_IF_FALSE/TRUE_OR_POP.
 	  Brings 2.7 test failures from 33 to 7.
